Revision history for Perl extension PGXN::API

0.5.1

0.5.0   2011-03-15T21:24:59
      - The URI templates are now read from the doc root rather than the
        mirror root, so that the API-specific templates stored there will be
        visible to the app.
      - Added documentation parsing. Docs are read by Text::Markup and
        converted to HTML. The HTML is cleaned up, unwanted stuff removed, and
        a table of contents added. They are then written to a file represented
        by the new "doc" URI template. They are also listed in the versioned
        distribution metadata, suitable for for formatting into a URI via the
        template. README files are included in this formatting treatment.

0.4.1   2011-03-11T23:42:38
      - Fixed a bug introduced in 0.4.0 where the /by/user and /by/tag files
        were overwriting release data from other distributions, thereby
        removing their abstracts. We now update the release data only for the
        currently-processing distribution.

0.4.0   2011-03-11T23:23:12
      - Added the "special_files" key to the distribution metadata file. It
        includes paths to `README`, `META.json`, `Changes`, `Makefile`, and
        other special files in the distribution.
      - Moved unzipped source directories under a subdirectory named for the
        distribution. That is, rather than `/src/pair-0.1.1/`, we now have
        `/src/pair/pair-0.1.1/`.
      - Make sure that the `/by/dist` file has the latest *stable* version
        listed as the version. Only make it a testing version if there is no
        stable version, and an unstabe version only if there is no stable or
        testing version.
      - Fixed bugs in release data merging in the `/by/user` and `/by/tag`
        files. The old code had relied too much on what was in the
        distribution. Since the only additional data point over the mirrored
        original is an abstract, we can just rely on the mirror data to be