@@ -1,6 +1,10 @@
 Revision history for Perl extension PGXN::API
 
 0.5.1
+      - The sync code now updates the mirror meta after `rsync`ing but before
+        doing anything else. It was fetching a template first, and this caused
+        errors on the first sync because the `index.json` had not yet been
+        copied to the document root.
 
 0.5.0   2011-03-15T21:24:59
       - The URI templates are now read from the doc root rather than the
